introdotto il msgbox su segnalazioni